# visual_lab_ros2

./: .gitignore  LICENSE  README.md
audio_player/: package.xml
audio_player/audio_player/: playback.py
audio_recorder/: package.xml  setup.py
audio_recorder/audio_recorder/: record.py
configurations/visual_lab_bringup/: setup.cfg
configurations/visual_lab_bringup/launch/: audio.launch.py  audio_to_visual.launch.py  camera.launch.py  cameras.launch.py  language.launch.py  microphone.launch.py  screen.launch.py  sentence_embeddings.launch.py  skeleton_tracking.launch.py  speaker.launch.py  speech_to_text.launch.py  text_generation.launch.py  text_to_speech.launch.py  visual.launch.py
configurations/visual_lab_interfaces/: CMakeLists.txt  package.xml
configurations/visual_lab_interfaces/msg/: Body.msg  BodyTracking.msg  SentenceEmbedding.msg
configurations/visual_lab_interfaces/srv/: InstructionPrompt.srv  SentenceEmbeddings.srv  SetScreenImage.srv
examples/audio_to_visual/: package.xml  setup.cfg  setup.py
examples/audio_to_visual/audio_to_visual/: visualizer.py
examples/audio_to_visual/launch/: audio_to_visual.launch.py
examples/image_generation/: package.xml  setup.cfg  setup.py
examples/speech_to_text/: package.xml
speech_to_text/: setup.py
speech_to_text/speech_to_text/: transcribe.py
visual_lab_bringup/: package.xml  setup.py
visual_lab_bringup/launch/: audio.launch.py  everything.launch.py  speech_to_text.launch.py
visual_lab_interfaces/: CMakeLists.txt
visual_lab_interfaces/srv/: SetScreenBackground.srv  UpdateScreenImage.srv
(+2 files in other folders)
